[gd_scene load_steps=4 format=3 uid="uid://dav06vxnfhyrt"]

[ext_resource type="Script" path="res://nodes/characters/components/input/character_party_input_manager.gd" id="1_pth7b"]
[ext_resource type="PackedScene" uid="uid://buja2j3vs068o" path="res://nodes/characters/components/input/character_com_input_manager.tscn" id="2_ypmwn"]
[ext_resource type="Script" path="res://nodes/characters/components/input/character_player_input_manager.gd" id="3_43exk"]

[node name="CharacterPartyInputManager" type="Node3D"]
script = ExtResource("1_pth7b")

[node name="CharacterCOMInputManager" parent="." instance=ExtResource("2_ypmwn")]
unique_name_in_owner = true
_avoidance_enabled = null

[node name="CharacterPlayerInput" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_43exk")
